overflow issue :(((

--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -15,6 +15,8 @@ body {
 
 .all {
 	overflow: hidden !important;
+	height: 100%;
+	position: fixed;
 }
 
 
